v7.10.0
  - Projects sorting by last commit date

v7.9.0
  - Reset user session if token is invalid
  - Runner delete api endpoint
  - Fix bug about showing edit button on commit page if user does not have permissions
  - Allow to pass description and tag list during Runner's registration
  - Added api for project jobs
  - Implementation of deploy jobs after all parallel jobs(tests).
  - Add scroll up/down buttons for better mobile experience with large build traces
  - Add runner last contact (Kamil Trzciński)
  - Allow to pause runners - when paused runner will not receive any new build (Kamil Trzciński)
  - Add brakeman (security scanner for Ruby on Rails)
  - Changed a color of the canceled builds
  - Fix of show the same commits in different branches

v7.8.2
  - Fix the broken build failed email
  - Notify only pusher instead of commiter

v7.8.0
  - Fix OAuth login with GitLab installed in relative URL
  - GitLab CI has same version as GitLab since now
  - Allow to pass description and tag list during Runner's registration (Kamil Trzciński)
  - Update documentation (API, Install, Update)
  - Skip refs field supports for wildcard branch name (ex. feature/*)
  - Migrate E-mail notification to Services menu (Kamil Trzciński)
  - Added Slack notifications (Kamil Trzciński)
  - Disable turbolink on links pointing out to GitLab server
  - Add test coverage parsing example for pytest-cov
  - Upgrade raindrops gem

v5.4.2
  - Fix exposure of project token via build data

v5.4.1
  - Fix 500 if on builds page if build has no job
  - Truncate project token from build trace
  - Allow users with access to project see build trace

v5.4.0 (Requires GitLab 7.7)
  - Fixed 500 error for badge if build is pending
  - Non-admin users can now register specific runners for their projects
  - Project specific runners page which users can access
  - Remove progress output from schedule_builds cron job
  - Fix schedule_builds rake task
  - Fix test webhook button