@@ -66,6 +66,14 @@
                 title: 'Assign runner to all projects',
                 method: :put
 
+      %tr
+        %td
+          = form_tag admin_runner_path(@runner), class: 'form-inline', method: :get do
+            .form-group
+              = search_field_tag :search, params[:search], class: 'form-control'
+            = submit_tag 'Search', class: 'btn'
+
+        %td
       - @projects.each do |project|
         %tr
           %td
